Bugfix: Hide overflow of graphs of large screens

--- a/static/css/exercise.css
+++ b/static/css/exercise.css
@@ -165,6 +165,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  overflow: hidden;
 }
 #graph.hidden {
   transform: translateY(-100%);
